--- a/GlobalStringsReadOnly/GlobalStringsReadOnly.csproj
+++ b/GlobalStringsReadOnly/GlobalStringsReadOnly.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DA1593B2-EFDC-4BC1-978D-E5ED49701099}</ProjectGuid>
+    <ProjectGuid>{66AACD9C-8913-41B0-B781-666E2C79687D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Models</RootNamespace>
-    <AssemblyName>Models</AssemblyName>
+    <RootNamespace>GlobalStringsReadOnly</RootNamespace>
+    <AssemblyName>GlobalStringsReadOnly</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,9 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IOSampleModel2.cs" />
-    <Compile Include="IOSampleModel.cs" />
-    <Compile Include="PictureSampleModel.cs" />
+    <Compile Include="GlobalReadOnlyStrings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
