--- a/Presentation/App.config
+++ b/Presentation/App.config
@@ -3,10 +3,12 @@
 
 	<!-- 
 	My connection string below
+	Data Source=LAPTOP-E7SGRA5P\SQLEXPRESS;Initial Catalog=myDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False
+		<add name="myDB" connectionString="Server=DESKTOP-75QEAH4\SQLEXPRESS;Database=myDB;Trusted_Connection=True;"
 	-->
 	
 	<connectionStrings>
-		<add name="myDB" connectionString="Server=DESKTOP-75QEAH4\SQLEXPRESS;Database=myDB;Trusted_Connection=True;"
+		<add name="myDB" connectionString="Data Source=LAPTOP-E7SGRA5P\SQLEXPRESS;Initial Catalog=myDB;Integrated Security=True;"
 			 providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 
@@ -16,3 +18,5 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 </configuration>
+
+
