--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -107,6 +107,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\GlobalStringsReadOnly\GlobalStringsReadOnly.csproj">
+      <Project>{66aacd9c-8913-41b0-b781-666e2c79687d}</Project>
+      <Name>GlobalStringsReadOnly</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Interfaces\Interfaces.csproj">
       <Project>{01106f65-9669-4ec3-82fe-74b767878b59}</Project>
       <Name>Interfaces</Name>
