--- a/Presentation/App.config
+++ b/Presentation/App.config
@@ -5,6 +5,8 @@
 	My connection string below
 	Data Source=LAPTOP-E7SGRA5P\SQLEXPRESS;Initial Catalog=myDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False
 		<add name="myDB" connectionString="Server=DESKTOP-75QEAH4\SQLEXPRESS;Database=myDB;Trusted_Connection=True;"
+	
+	Data Source=DESKTOP-75QEAH4\SQLEXPRESS;Initial Catalog=myDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False
 	-->
 	
 	<connectionStrings>
