--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -188,5 +188,8 @@
       <Name>ApplicationCore</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
